--- a/blueprints/template/cap_alert_markdown_sensor.yaml
+++ b/blueprints/template/cap_alert_markdown_sensor.yaml
@@ -46,60 +46,75 @@ sensor:
     unique_id: "{{ sensor_name }}"
     state: "{{ state_attr(alert_sensor, 'active_alerts') | int(0) }}"
     attributes:
-      formatted_content: |-
+      formatted_content: >
         {% set alerts = state_attr(alert_sensor, 'alerts') %}
         {% if alerts and alerts | length > 0 %}
         {% for alert in alerts %}
         {% set start_ts = as_timestamp(alert.starttime) %}
         {% set end_ts = as_timestamp(alert.endtime) %}
         {% set now_ts = now().timestamp() %}
-        
-        <table role="grid" cellspacing="0" cellpadding="0" border="0">
-        <tr height="32">
-        <td rowspan="2" valign="middle" width="70">{% if show_icon and alert.entity_picture %}<img src="{{ alert.entity_picture }}" width="64" height="64">{% endif %}</td>
-        <td valign="middle" height="32"><font size="3"><strong>{% if show_status %}{{ 'Expected' if start_ts > now_ts else ('Ended' if end_ts < now_ts else 'Ongoing') }} - {% endif %}{{ alert.title }}</strong></font></td>
-        </tr>
-        <tr height="24">
-        <td valign="top" height="24">{{ alert.awareness_level_color}} severity</td>
-        </tr>
-        </table>
-        
+
+
+        <table role="grid" cellspacing="0" cellpadding="0" border="0"><tr height="32"><td rowspan="2" valign="middle" width="70">{% if show_icon and alert.entity_picture %}<img src="{{ alert.entity_picture }}" width="64" height="64">{% endif %}</td><td valign="middle" height="32"><font size="3"><strong>{% if show_status %}{{ 'Expected' if start_ts > now_ts else ('Ended' if end_ts < now_ts else 'Ongoing') }} - {% endif %}{{ alert.title }}</strong></font></td></tr><tr height="24"><td valign="top" height="24">{{ alert.awareness_level_color}} severity</td></tr></table>
+
+
         **Type**: {{ alert.event_awareness_name }}
-        
+
+
         #### Time period
-        
+
+
         🔵 {{ start_ts | timestamp_custom('%A, %d %B kl. %H:%M', true) }} - increasing danger
-        
+
+
         🔵 {{ end_ts | timestamp_custom('%A, %d %B kl. %H:%M', true) }} - decreasing danger
-        
+
+
         #### Description
-        
+
+
         {{ alert.description }}
-        
+
+
         {% if alert.instruction %}
+
         #### Instructions
-        
+
+
         {{ alert.instruction }}
+
         {% endif %}
-        
+
+
         {% if alert.consequences %}
+
         #### Consequences
-        
+
+
         {{ alert.consequences }}
+
         {% endif %}
-        
+
+
         {% if alert.area %}
+
         **Area**: {{ alert.area }}
+
         {% endif %}
-        
+
+
         **Certainty**: {{ alert.certainty }} | **Severity**: {{ alert.severity }}
-        
+
+
         ---
-        
+
+
         {% if show_map and alert.map_url %}
+
         <img src="{{ alert.map_url }}" width="400">
+
         {% endif %}
-        
+
         {% endfor %}
         {% else %}
         No active alerts
